# todos-flask

./: Dockerfile  Makefile  README.md  application.yml  docker-compose.yml  pyproject.toml
builder-tools/: Containers.mk  Packages.mk
todos_app/: app.py  wsgi.py
todos_app/blueprints/: __init__.py  authentication.py  project.py  task.py
todos_app/exceptions/: api_exception.py  authentication_exception.py  autherization_exception.py  database_exception.py  entity_already_exist_exception.py  entity_not_found_exception.py  invalid_request_exception.py
todos_app/models/: project.py  role.py  task.py  user.py  usertask.py
todos_app/repositories/: project_repo.py  task_repo.py  user_repo.py
todos_app/responses/: base_response.py
todos_app/schemas/: __init__.py  task_schema.py  user_schema.py
todos_app/utils/: http_status_codes.py  init_db.py  role_required.py
